clang/test/CXX/basic/basic.start/basic.start.main/p2h.cpp
// RUN: %clang_cc1 -fsyntax-only -verify %s 

template<typename T>
int main() { } // expected-error{{'main' cannot be a template}}

